Working joins and reordering and producing data.

--- a/census-servant/census-servant.cabal
+++ b/census-servant/census-servant.cabal
@@ -58,6 +58,7 @@ executable census-downloader
                      , warp
                      , Frames
                      , http-api-data
+                     , lens
                      , pipes
                      , pipes-safe
                      , transformers
