--- a/census-servant/census-servant.cabal
+++ b/census-servant/census-servant.cabal
@@ -32,6 +32,7 @@ library
                      , lens
                      , lens-aeson
                      , vector
+--                     , Http
                      , http-api-data
                      , pipes                     
                      , safe-exceptions
@@ -41,6 +42,7 @@ library
                      , servant-server
                      , servant
                      , transformers
+                     , uri-encode
                      , vinyl
                      , warp
                      , http-api-data
