Working ACS query by cong district

--- a/census-servant/census-servant.cabal
+++ b/census-servant/census-servant.cabal
@@ -74,5 +74,6 @@ executable census-downloader
                      , servant-client
                      , servant-server
                      , text
+                     , vinyl
   hs-source-dirs:      census-downloader
   default-language:    Haskell2010
