--- a/census-servant/census-servant.cabal
+++ b/census-servant/census-servant.cabal
@@ -51,6 +51,7 @@ library
 
 executable census-downloader
   main-is:             Main.hs
+  ghc-options:         -O0
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.11.1.0
