Working on more granular ACS data

--- a/census-servant/census-servant.cabal
+++ b/census-servant/census-servant.cabal
@@ -69,6 +69,7 @@ executable census-downloader
                      , census-servant                     
                      , warp
                      , Frames
+                     , Frames-utils
                      , http-api-data
                      , lens
                      , pipes
