Long data variant works.  Some trouble querying all racial categories.

--- a/census-servant/census-servant.cabal
+++ b/census-servant/census-servant.cabal
@@ -48,6 +48,7 @@ library
                      , servant-client
                      , servant-server
                      , servant
+                     , split
                      , time
                      , transformers
                      , type-level-sets
